plugin.yml cleanup

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,120 +1,107 @@
 name: UHC
 main: com.leontg77.uhc.Main
-version: 1.7.14
+version: 1.6.2
 author: LeonTG77
 description: UHC plugin made for Leons UHC
-softdepend: [ProtocolLib]
 
 commands:
   arena:
-    description: Join the arena.
+    description: Command to join the arena.
     aliases: [a, p]
   ban:
     description: Ban a player.
-  pvp:
-    description: Toggle pvp.
   broadcast:
     description: Broadcast a message to all players online.
     aliases: [bc, bcast]
   butcher:
     description: Kills all hostile mobs.
-  start:
-    description: Start command.
-  sethealth:
-    description: Set the health of a player.
-  skull:
-    description: Spawn a skull of a player.
-  spread:
-    description: Spreads all players and freezes them.
-  setmaxhealth:
-    description: Set the max health of a player.
-  tps:
-    description: Check the servers tps.
-    aliases: [lag]
-  hof:
-    description: Open the hall of fame.
-    aliases: [halloffame]
-  random:
-    description: Create random teams.
-  clearxp:
-    description: Clear someones xp.
+  config:
+    description: Change the config settings.
   clearinv:
     description: Clear someones inv.
+  clearxp:
+    description: Clear someones xp.
+  edit:
+    description: Edit the sign you are looking at.
+  end:
+    description: End the game and reset everything.
   feed:
     description: Feed someone.
-  scenario:
-    description: Enable and disable scenarios
-    aliases: [scen]
-  ac:
-    description: Type in staffchat
-    aliases: [sc]
-  ms:
-    description: Check someones ms
-    aliases: [ping]
-  rules:
-    description: View our rules.
-  heal:
-    description: Heal someone.
-  stats:
-    description: View your stats.
-  end:
-    description: Ends the game.
-  near:
-    description: Check for nearby players.
-  team:
-    description: Team command, check usage.
-    aliases: [party]
-  pm:
-    description: Team chat command.
-  vote:
-    description: Start a vote.
-  kick:
-    description: Kick a player.
-  unban:
-    description: Unban a player.
-  timer:
-    description: Hotbar timer command.
-  timeleft:
-    description: Chec the time left.
-  invsee:
-    description: Opens the targets inventoty.
-  tp:
-    description: Makes you able to teleport as a spectator.
-  list:
-    description: Tells you all the online players.
-  spectate:
-    description: Spectator management.
-    aliases: [spec]
-  setspawn:
-    description: Sets the lobby spawn.
-  helpop:
-    description: If you need help from staff, use this command.
-  whitelist:
-    description: Whitelist command.
-    aliases: [wl]
-  teamloc:
-    description: Tell your location out to your teammates.
-    aliases: [tl]
-  edit:
-    description: Edits signs.
   gamemode:
     description: Change your gamemode.
     aliases: [gm]
   giveall:
     description: Give everyone online an item.
-  config:
-    description: Change the configs items.
-  mute:
-    description: Mute management.
+  heal:
+    description: Heal someone.
   health:
     description: View a player's health.
     aliases: [h]
-  speed:
-    description: Change your spectator fly speed.
-    aliases: [spd]
+  helpop:
+    description: If you need help from staff, use this command.
+  hof:
+    description: View the hall of fame.
+    aliases: [halloffame]
+  invsee:
+    description: Opens the targets inventoty.
+  kick:
+    description: Kick a player.
+  list:
+    description: Shows a list of online players.
+  ms:
+    description: Check someones ping to the server
+    aliases: [ping]
   msg:
     description: Msg a player something secret.
     aliases: [t, tell, w, whisper, m]
+  mute:
+    description: Mute a player or the chat.
+  near:
+    description: Check for nearby players.
+  pm:
+    description: Team chat command.
+  pvp:
+    description: Toggle pvp in a specific world.
+  random:
+    description: Create random teams.
   reply:
     description: Reply to your latest msg.
     aliases: [r]
+  rules:
+    description: View our rules.
+  scenario:
+    description: Enable and disable scenarios
+    aliases: [scen]
+  sethealth:
+    description: Set the health of a player.
+  setmaxhealth:
+    description: Set the max health of a player.
+  ac:
+    description: StaffChat Command
+    aliases: [sc]
+  start:
+    description: Start command.
+  stats:
+    description: View your stats.
+  team:
+    description: Team command, check usage.
+    aliases: [party]
+  timeleft:
+    description: Chec the time left.
+  timer:
+    description: Hotbar timer command.
+  teamloc:
+    description: Tell your location out to your teammates.
+    aliases: [tl]
+  tps:
+    description: Check the server tps and usage.
+    aliases: [lag]
+  tp:
+    description: Makes you able to teleport as a spectator.
+  unban:
+    description: Unban a player.
+  vote:
+    description: Start or end a vote.
+  whitelist:
+    description: Whitelisting command.
+    aliases: [wl]
