Changed name back to UHC

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
-name: UltraHardcore
+name: UHC
 main: com.leontg77.uhc.Main
-version: 1.6.2
+version: 1.6.5
 author: LeonTG77
 description: UHC plugin made for Leons UHC
 
