--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,16 +1,20 @@
 name: UHC
 main: com.leontg77.uhc.Main
-version: 1.7.0
+version: 1.7.2
 author: LeonTG77
 description: UHC plugin made for Leons UHC
 
 commands:
+  aboard:
+    description: Toggle the arena board.
   arena:
     description: Command to join the arena.
     aliases: [a, p]
   ban:
     description: Ban a player.
     aliases: [dq]
+  board:
+    description: Toggle the pregame board.
   broadcast:
     description: Broadcast a message to all players online.
     aliases: [bc, bcast]
@@ -18,6 +22,9 @@ commands:
     description: Kills all hostile mobs.
   config:
     description: Change the config settings.
+  clearchat:
+    description: Clear the chat.
+    aliases: [cc]
   clearinv:
     description: Clear someones inv.
   clearxp:
@@ -59,12 +66,16 @@ commands:
     description: Mute a player or the chat.
   near:
     description: Check for nearby players.
+  perma:
+    description: Enable permaday.
   pm:
     description: Team chat command.
   pvp:
     description: Toggle pvp in a specific world.
   random:
     description: Create random teams.
+  rank:
+    description: Change someones rank.
   reply:
     description: Reply to your latest msg.
     aliases: [r]
@@ -101,6 +112,8 @@ commands:
   tempban:
     description: Tempban a player.
     aliases: [tban]
+  text:
+    description: Spawn a floating text.
   timeleft:
     description: Chec the time left.
   timer:
