I don't know what I updated but SmartGit told me there were changed, so...

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -12,6 +12,7 @@ commands:
     aliases: [a, p]
   ban:
     description: Ban a player.
+    aliases: [dq]
   board:
     description: Toggle the pregame board.
   broadcast:
